--- a/index_skeleton.html
+++ b/index_skeleton.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 
 	<!-- css -->
-	<link rel="stylesheet" type="text/css" href="src/fullpage.css" />
-	<link rel="stylesheet" type="text/css" href="src/style.css" />
+	<link rel="stylesheet" type="text/css" href="/src/fullpage.css" />
+	<link rel="stylesheet" type="text/css" href="/src/style.css" />
 
 	<!-- javascript libs -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
