--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 	<meta charset="utf-8">
 
 	<!-- css -->
-	<link rel="stylesheet" type="text/css" href="/src/fullpage.css" />
-	<link rel="stylesheet" type="text/css" href="/src/style.css" />
+	<link rel="stylesheet" type="text/css" href="./src/fullpage.css" />
+	<link rel="stylesheet" type="text/css" href="./src/style.css" />
 
 	<!-- javascript libs -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="https://d3js.org/d3.v5.min.js"></script>
-	<script type="text/javascript" src="/src/fullpage.js"></script>
+	<script type="text/javascript" src="./src/fullpage.js"></script>
 	
 	<!-- geomap libs https://d3-geomap.github.io/ -->
 
@@ -61,7 +61,7 @@
 
 	<!-- d3 charts -->
 	<!-- NOTE: these chart calls HAVE to come at end, if container div is not defined first (in above sections) then charts will not appear -->
-	<script type="text/javascript" src="/src/barchart.js"></script>
+	<script type="text/javascript" src="./src/barchart.js"></script>
 
 	<!-- activate fullpage.js -->
 	<script type="text/javascript">	
