--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 				<p id="body-sub-header">Who am I?</p>
 				<p id="body-text">
-				My name is Phil Bailey and I choose to do a short overview of UFC stats - primarily because I'm a huge MMA fan and thought
+				My name is Phil Bailey and I chose to do a short overview of UFC stats - primarily because I'm a huge MMA fan and thought
 				this would be a fun topic for the project. I'm definitely not a creative designer - and partially color blind - so hopefully you didn't
 				find my <i>creative</i> choices to terribly ugly. Personally (though im biased), I thought the final product turned out well, and if
 				you're still reading this I hope you enjoyed it and learned something too!
