--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
 	<div id="fullpage">
 		
 		<!-- Page 1 -------------------------------------------------------------------------------->
-		<div class="section" style="background-image: url(./images/main_img.jpg);">
-			<h class="home">Which Contiguous US State housed the most UFC fighters between 1993-2016 & what are some key characteristics of those fighters?</h>
-			<br><br>
-			<h class="home-sub-head">- scroll down to begin the presentation -</h>		
+		<div class="section">
+			<div class="home">		
+				<h class="home">Which Contiguous US State housed the most UFC fighters between 1993-2016 & what are some key characteristics of those fighters?</h>
+				<br><br>
+				<h class="home-sub-head">- scroll down to begin the presentation -</h>
+			</div>		
 		</div>
 
 
