--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<p id="body-sub-header">What does this visualization tell us?</p>
 				<p id="body-text">
 					This choropleth map shows us the number of active fighters from each state. The darker the color, the more active fighters in that specific state.
-					Highlight a state to see the exact number of fighters. Additionally, you can double-click to zoom in on a region. 
+					Highlight a state to see the exact number of fighters.
 					<br><br>
 					We can clearly see one state stands above the rest when it comes to pure volume, and that state is <b>California</b>.
 				</p>
